<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.OAuth.VerifyOauthFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@color/black"></FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/d_24"
            android:background="@drawable/white_radius_box"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingTop="@dimen/d_12"
            android:paddingBottom="@dimen/d_12"
            android:paddingLeft="@dimen/d_32"
            android:paddingRight="@dimen/d_32">

            <vn.kido.shop.IControl.ITextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gift_title"
                android:textColor="@color/main"
                android:textSize="@dimen/s_18"
                app:fontName="BRYANTLG_BOLD" />

            <vn.kido.shop.IControl.ITextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_8"
                android:text="@string/gift_dialog_1"
                android:textColor="@color/gray_600"
                android:textSize="@dimen/s_16"
                app:fontName="BRYANTLG_BOLD" />

            <vn.kido.shop.IControl.ITextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_12"
                android:text="@string/gift_dialog_2"
                android:textColor="@color/gray_600"
                android:textSize="@dimen/s_16"
                app:fontName="BRYANTLG_BOLD" />

        </LinearLayout>

        <vn.kido.shop.IControl.IButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/d_40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/d_16"
            android:background="@drawable/main_box"
            android:paddingLeft="@dimen/d_40"
            android:paddingRight="@dimen/d_40"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/s_16"
            app:fontName="BRYANTLG_BOLD" />

    </LinearLayout>

</FrameLayout>