<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kidoshop_bg"
    android:windowSoftInputMode="stateAlwaysVisible"
    tools:context=".Fragment.OAuth.VerifyOauthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/d_32"
            android:background="@drawable/white_radius_box"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="@dimen/d_12">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="@dimen/d_28"
                    android:layout_height="@dimen/d_28"
                    android:layout_gravity="top"
                    android:layout_marginTop="@dimen/d_8"
                    android:padding="@dimen/d_4"
                    android:src="@drawable/otp_back_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d_4"
                    android:orientation="vertical">

                    <vn.kido.shop.IControl.ITextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/d_8"
                        android:paddingRight="@dimen/d_14"
                        android:text="@string/confirm_content"
                        android:textColor="@color/main_gray"
                        android:textSize="@dimen/s_16"
                        app:fontName="BRYANTLG_BOLD" />

                    <vn.kido.shop.IControl.ITextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/d_8"
                        android:gravity="center_vertical"
                        android:paddingRight="@dimen/d_14"
                        android:text="@string/enter_otp"
                        android:textColor="@color/main_gray"
                        android:textSize="@dimen/s_16"
                        app:fontName="BRYANTLG_BOLD" />

                </LinearLayout>

            </LinearLayout>

            <vn.kido.shop.IControl.IEdittext
                android:id="@+id/edt_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d_14"
                android:layout_marginRight="@dimen/d_14"
                android:layout_marginTop="@dimen/d_8"
                android:background="@android:color/transparent"

                android:gravity="center"
                android:hint="@string/otp"
                android:inputType="number"
                android:maxLength="4"
                android:padding="@dimen/d_8"
                android:textColor="@color/main_black"
                android:textColorHint="@color/main_gray"
                android:textSize="@dimen/s_18"
                app:fontName="BRYANTLG_BOLD">

                <requestFocus />
            </vn.kido.shop.IControl.IEdittext>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_1"
                android:layout_marginBottom="@dimen/d_8"
                android:background="@color/gray_300" />

        </LinearLayout>

        <vn.kido.shop.IControl.ITextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/not_receive_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/s_16"
            app:fontName="BRYANTLG_BOLD" />

        <vn.kido.shop.IControl.IButton
            android:id="@+id/btn_resend"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/d_44"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/d_8"
            android:background="@drawable/background_button"
            android:paddingLeft="@dimen/d_40"
            android:paddingRight="@dimen/d_40"
            android:text="@string/resend"
            android:textColor="@color/white"
            android:textSize="@dimen/s_16"
            app:fontName="BRYANTLG_BOLD" />

    </LinearLayout>

    <include layout="@layout/progress" />

</FrameLayout>