<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragment.Profile.ChildKpointChangeGiftFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_160"
                android:orientation="vertical"
                android:padding="@dimen/d_8"
                android:gravity="center"
                android:background="@drawable/diem_chi_bg">

                <vn.kido.shop.IControl.ITextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_have"
                    android:textColor="@color/white"
                    android:textSize="@dimen/s_14"
                    app:fontName="BRYANTLG_BOLD"/>

                <vn.kido.shop.IControl.ITextView
                    android:id="@+id/txt_kpoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/s_36"
                    app:fontName="BRYANTLG_BOLD"/>

                <FrameLayout
                    android:layout_width="@dimen/d_80"
                    android:layout_height="@dimen/d_24">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/kpoint_vnd_bg"/>

                    <vn.kido.shop.IControl.ITextView
                        android:layout_width="@dimen/d_80"
                        android:layout_height="@dimen/d_24"
                        android:gravity="center"
                        android:paddingBottom="@dimen/d_6"
                        android:text="@string/kpoint"
                        android:textAllCaps="true"
                        android:textColor="@color/main"
                        android:textSize="@dimen/s_14"
                        app:fontName="BRYANTLG_BOLD" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <vn.kido.shop.IControl.ITextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/more_point"
                        android:textColor="@color/yellow_500"
                        android:textSize="@dimen/s_14"
                        app:fontName="BRYANTLG_NORMAL"/>

                    <vn.kido.shop.IControl.ITextView
                        android:id="@+id/txt_shop_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/d_4"
                        android:text="@string/kido_shop"
                        android:textColor="@color/white"
                        android:textSize="@dimen/s_16"
                        app:fontName="BRYANTLG_BOLD"/>

                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/d_8"
                android:paddingLeft="@dimen/d_12"
                android:paddingRight="@dimen/d_12"
                android:paddingBottom="@dimen/d_8">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

        <include layout="@layout/progress"/>

    </FrameLayout>



</LinearLayout>