<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".Fragment.Order.Receive.VerifyReceiveOrderFragment">


    <LinearLayout
        android:id="@+id/container_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/d_16"
            android:background="@drawable/white_radius_box"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="@dimen/d_12">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="@dimen/d_20"
                    android:layout_height="@dimen/d_20"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/otp_back_icon" />

                <vn.kido.shop.IControl.ITextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/confirm_product"
                    android:textColor="@color/main"
                    android:textSize="@dimen/s_16"
                    app:fontName="BRYANTLG_BOLD" />

            </FrameLayout>

            <vn.kido.shop.IControl.ITextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d_16"
                android:layout_marginRight="@dimen/d_16"
                android:padding="@dimen/d_8"
                android:text="@string/content_confirm_product"
                android:textColor="@color/main_gray"
                android:textSize="@dimen/s_14"
                app:fontName="BRYANTLG_BOLD" />

        </LinearLayout>

        <vn.kido.shop.IControl.IButton
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/d_40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/d_16"
            android:background="@drawable/main_box"
            android:paddingLeft="@dimen/d_40"
            android:paddingRight="@dimen/d_40"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/s_14"
            app:fontName="BRYANTLG_BOLD" />

    </LinearLayout>

    <include layout="@layout/progress" />

</FrameLayout>